<resources>
    <string name="app_name">Nutrition diary</string>
    <string name="menu_calendar_title">Select date</string>
    <string name="menu_calendar_description">Date selection</string>

    <string name="intake_type_drink">Drink</string>
    <string name="intake_type_food">Food</string>

    <string name="cannot_be_empty_error">Cannot be empty</string>
    <string name="edit_intake_field_name">Name</string>
    <string name="edit_intake_field_type">Type</string>
    <string name="edit_intake_field_calories">Calories</string>
    <string name="suffix_kcal">kcal</string>
    <string name="helper_name_field">Arbitrary product name</string>
    <string name="necessity_text">Was this redundant?</string>
    <string name="edit_intake_title_edit">Edit</string>
    <string name="edit_intake_title_add">Add</string>
    <string name="hint_calories">* If you don\'t know how many calories the product has, just leave the field empty or set it to zero.</string>
    <string name="list_item_intake_calories">%1$.1f kcal</string>

    <string-array name="intake_types">
        <item>Food</item>
        <item>Drink</item>
    </string-array>

    <string-array name="redundant_intake_types">
        <item>Redundant food</item>
        <item>Redundant drink</item>
    </string-array>

    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="dialog_remove_intake_note_title">Remove?</string>
    <string name="dialog_remove_intake_note_message">Do you really want to remove the intake note?</string>
    <string name="snackbar_removed_intake_note">An intake note has been removed.</string>
    <string name="snackbar_added_intake_note">A new intake note has been added.</string>
    <string name="message_no_intake_notes_yet">There is no intake notes here yet</string>
</resources>