<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="8dp"
        android:id="@+id/content_edit_text_field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_intake_field_name"
        app:helperText="@string/helper_name_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_edit_dropdown_type"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:hint="@string/edit_intake_field_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_edit_text_field_calories"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            app:suffixText="@string/suffix_kcal"
            android:hint="@string/edit_intake_field_calories"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:gravity="end"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_marginHorizontal="8dp"
        android:id="@+id/content_edit_checkbox_redundancy"
        android:layout_marginTop="8dp"
        android:text="@string/necessity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/hint_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/content_edit_save_button"
        android:text="@string/action_save"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>